# tuesdays

./: .gitignore  README.md
backend/starter/: Cargo.toml
chat-server-go/: .gitignore  CLAUDE.md  README.md  Spec.md  go.mod  main.go
chat-server-go/commands/: commands.go
chat-server-go/domain/: interfaces.go
chat-server-go/persistence/: memory_store.go  memory_store_test.go
chat-server-go/tests/: requirements.txt  test_chat.py
chat-server-go/transport/: handler.go  handler_test.go  member.go  member_store.go  member_store_test.go  mock_websocket.go  websocket.go  websocket_handler_test.go
chat-server-go/wire/: message.go  message_test.go
deployment/: deploy.yaml  template.yaml
signaling-server-go/: .gitignore  Makefile  README.md  go.mod  go.sum
signaling-server-go-v2/: .gitignore  DEPENDENCIES.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  Makefile  PROJECT_STATUS.md  README.md  ai_spending.md  docker-compose.yml  go.mod  go.sum
signaling-server-go-v2-cursor/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  prometheus.yml
signaling-server-go-v2-cursor/config/: default.yaml
signaling-server-go-v2-cursor/prompts/: signaling-server-prompt-1-spending.md  signaling-server-prompt-1.md
signaling-server-go-v2/config/: config.go  config_test.go  default.yaml
signaling-server-go-v2/docker/: Dockerfile
signaling-server-go-v2/prompts/: signaling-server-prompt-1-spending.md  signaling-server-prompt-1-thread.md
streamer/: Cargo.toml
streamer/src/: main.rs
transmitter/: .gitignore  Cargo.toml
viewer-js/: client.html
(+41 files in other folders)
