[package]
name = "streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
cocoa = "0.26.0"
futures-util = "0.3.31"
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
gstreamer-video = "0.23.5"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.1"
tokio-tungstenite = "0.26.2"
url = "2.5.4"
webrtc = "0.12.0"
